# evtdis

./: README.md  pyproject.toml
src/evtdis/: Dispatcher.py  Event.py  Publisher.py  __init__.py
src/evtdis/tests/: __init__.py  test_dispatcher.py  test_event.py  test_publisher.py
tests/: __init__.py  test_dispatcher.py  testlog.conf
